--- a/styles/shared/amazon-header.css
+++ b/styles/shared/amazon-header.css
@@ -5,11 +5,13 @@
   padding-right: 15px;
   padding-top: 10px;
   padding-bottom: 10px;
+  max-width: 100%;
 
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 15px;
+  flex-shrink: 5;
   flex-wrap: wrap;
 
   position: fixed;
